[gd_scene load_steps=4 format=3 uid="uid://drr8jwrm6y2d5"]

[ext_resource type="Script" path="res://addons/Holepunch/holepunch_node.gd" id="1"]
[ext_resource type="Script" path="res://Scenes/Lobby.gd" id="2"]
[ext_resource type="PackedScene" path="res://Objects/BetterTextEdit.tscn" id="3"]

[node name="Lobby" type="Node"]
script = ExtResource("2")

[node name="HolePunch" type="Node" parent="."]
script = ExtResource("1")
rendevouz_address = "13.48.203.116"
rendevouz_port = 4000
MAX_PLAYER_COUNT = 4

[node name="FailTimer" type="Timer" parent="."]
one_shot = true

[node name="ConnectTimer" type="Timer" parent="."]
one_shot = true

[node name="Status" type="Label" parent="."]
offset_left = 277.0
offset_top = 64.0
offset_right = 455.0
offset_bottom = 116.0
text = "Status: "

[node name="ConnectingUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonCancel" type="Button" parent="ConnectingUI"]
layout_mode = 0
offset_left = 384.0
offset_top = 512.0
offset_right = 640.0
offset_bottom = 576.0
text = "Cancel"

[node name="ButtonStart" type="Button" parent="ConnectingUI"]
layout_mode = 0
offset_left = 384.0
offset_top = 416.0
offset_right = 640.0
offset_bottom = 480.0
text = "Start"

[node name="CodeDisplay" type="Label" parent="ConnectingUI"]
layout_mode = 0
offset_left = 277.0
offset_top = 88.0
offset_right = 353.0
offset_bottom = 102.0
text = "Room code:"

[node name="Playerlist" type="Label" parent="ConnectingUI"]
layout_mode = 0
offset_left = 277.0
offset_top = 112.0
offset_right = 488.0
offset_bottom = 126.0
text = "Playerlist: (not yet implemented)"

[node name="MainUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonJoin" type="Button" parent="MainUI"]
layout_mode = 0
offset_left = 384.0
offset_top = 512.0
offset_right = 640.0
offset_bottom = 576.0
text = "Join"

[node name="ButtonHost" type="Button" parent="MainUI"]
layout_mode = 0
offset_left = 384.0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 384.0
text = "Host"

[node name="Nickname" parent="MainUI" instance=ExtResource("3")]
layout_mode = 0
offset_left = 384.0
offset_top = 224.0
offset_right = 640.0
offset_bottom = 288.0
hint = "enter nickname"
max_length = 10
asciinums = true
allcaps = false

[node name="RoomCode" parent="MainUI" instance=ExtResource("3")]
layout_mode = 0
offset_left = 384.0
offset_top = 416.0
offset_right = 640.0
offset_bottom = 480.0
hint = "enter roomcode to join"

[connection signal="hole_punched" from="HolePunch" to="." method="_on_HolePunch_hole_punched"]
[connection signal="return_unsuccessful" from="HolePunch" to="." method="_on_HolePunch_return_unsuccessful"]
[connection signal="session_registered" from="HolePunch" to="." method="_on_HolePunch_session_registered"]
[connection signal="update_lobby" from="HolePunch" to="." method="_on_HolePunch_update_lobby"]
[connection signal="timeout" from="FailTimer" to="." method="_on_FailTimer_timeout"]
[connection signal="timeout" from="ConnectTimer" to="." method="_on_ConnectTimer_timeout"]
[connection signal="pressed" from="ConnectingUI/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="ConnectingUI/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="MainUI/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="MainUI/ButtonHost" to="." method="_on_ButtonHost_pressed"]
